34_01_propietats/propietats.txt
/###########################
A/otacions sobre propietats
###########################

* Autor/a: Angelo Miontenegro

* Data: 9/02/2023

Introducció
===========

En aquest exercici incloc les meves anotacions sobre el tema de *propietats*
dins de la *programació orientada a objectes*.

Les anotacions responen a diferents preguntes sobre aquest codi:

::

    01   public class GatRenat {
    02       public int vides = 7;         // vides disponibles del gat Renat
    03       public static void main(String[] args) {
    04           GatRenat renat;           // declarem la referència al gat
    05           renat = new GatRenat();   // creem la instància del gat Renat.
    06           System.out.println("Al gat Renat li queden " + renat.vides + " vides");
    07       }
    08   }

Pregunta 1. El nom del fitxer
=============================

Per que funcioni, el nom del fitxer que contingui el programa anterior ha
de ser ``GatRenat``.

Si reanomeno el fitxer anterior a ``UnNomQualsevol.java``, em trobo el
següent resultat a l'hora de compilar:

::

    $ javac UnNomQualsevol.java
    "UnNomQualsevol.java:1: error: class GatRenat is public, should be declared in a file named
    GatRenat.java
    public class GatRenat {"


Pregunta 2. Sortida
===================

En executar el programa ``GatRenat`` m'ha generat la següent sortida:

::

    $ java GatRenat
    "Al gat Renat li queden 7 vides"


Pregunta 3. Declaració de ``renat``.
====================================

La línia en que està declarada la variable ``renat`` que apareix a la
línia 6 és  linea 4:     GatRenat renat;

Pregunta 4. Inicialització
==========================

El valor que es mostra per pantalla, és assignat a la línia 2.

Pregunta 5. No inicialització
=============================

Si a la línia especificada per la pregunta anterior no li assignem cap
valor, el que es mostrarà per pantalla és:

::

    dependera de si le asignas un valor y luego lo retiras, la copilacion lo mantedra guardado asi no lo hayas asignado al valor, pero si no le asignas un valor desde el inicio te dara un error como el siguiente " java:2: error: illegal start of expression
    public int vides= ;// vides disponibles del gat Renat"
"


Pregunta 6. Eliminem la línia 5
===============================

En cas que la línia 5 no hi sigui (per exemple, si la comento), es
produeix el següent resultat:

GatRenat.java:6: error: variable renat might not have been initialized
        System.out.println("Al gat Renat li queden " + renat.vides + " vides");
                                                       ^
1 error

Penso que passa això perquè no se a asignado nada a la incializacion de la variable.

Pregunta 7. Referència
======================

Penso que el el comentari de la línia 4 parla de *referència* perquè "en la linea 4 el GatRenat renat referencia un espacio de memoria donde se almacenan los datos .

Crec que la  relació entre *referència* i *variable* és: en este caso referencia como lo menciona en la propia palabra habala de una referencia donde se encuentran sus datos en cambio una variable contiene directamente el valor o los datos que contiene.


Pregunta 8. Instància
=====================

Respecte la línia 5:

* la instància és: GatRenat(); XXX

* la variable és: renat

* la referència és: new GatRenat()XXX

* la classe és: GatRenat

Pregunta 9. ``vides`` i variables globals
=========================================

Les diferències presenta la variable ``vides`` respecte les 
*variables globals* són:

1. en la estructura de declaracion la global es static tipode variable = "valor" en cambio este vide es un public int ;

2. 
